Fix scalling on mobile

--- a/style.css
+++ b/style.css
@@ -26,13 +26,16 @@ header{
     }
 }
 main{
-    display: grid;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap-reverse;
     position: relative;
-    grid-template-columns: 1fr auto;
+    
 
 }
 .left-side{
     padding: 1rem;
+    flex:1;
 }
 footer{
     background-color: white;
@@ -56,8 +59,9 @@ footer{
 }
 
 #app{
+    flex-grow: 1;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(332px, 1fr));
     grid-auto-rows: min-content;
     gap: 1em;
 }
@@ -114,7 +118,8 @@ footer{
     flex-direction: column;
     gap: 1em;
     padding: 1.5em;
-    width: min(40ch, 100%);
+    flex-grow: 1;
+    max-width: 50ch;
 }
 form input[type="text"], form input[type='number'], form input[type='submit'], form select{
     width: 100%;
